force-app/main/default/objects/InvoiceLine__c/InvoiceLine__c.object-meta.xml
<CustomObject>
    <description>Ligne figée d'une facture client.</description>
    <label>Ligne de facture</label>
    <nameField>
        <displayFormat>LIG-{000000}</displayFormat>
        <label>Numéro de ligne</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de facture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>