force-app/main/default/objects/InvoiceLine__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Description figée</label><length>32000</length><type>LongTextArea</type><visibleLines>3</visibleLines></CustomField>