force-app/main/default/objects/InvoiceLine__c/fields/DiscountPercent__c.field-meta.xml
<CustomField><fullName>DiscountPercent__c</fullName><defaultValue>0</defaultValue><label>Remise</label><precision>5</precision><required>true</required><scale>2</scale><type>Percent</type></CustomField>