force-app/main/default/objects/InvoiceLine__c/fields/GrossAmount__c.field-meta.xml
<CustomField><fullName>GrossAmount__c</fullName><defaultValue>0</defaultValue><label>Montant TTC</label><precision>18</precision><required>true</required><scale>2</scale><type>Currency</type></CustomField>