force-app/main/default/objects/InvoiceLine__c/fields/NetAmount__c.field-meta.xml
<CustomField><fullName>NetAmount__c</fullName><defaultValue>0</defaultValue><label>Montant HT</label><precision>18</precision><required>true</required><scale>2</scale><type>Currency</type></CustomField>