force-app/main/default/objects/InvoiceLine__c/fields/Quantity__c.field-meta.xml
<CustomField><fullName>Quantity__c</fullName><defaultValue>1</defaultValue><label>Quantité</label><precision>16</precision><required>true</required><scale>3</scale><type>Number</type></CustomField>