force-app/main/default/objects/InvoiceLine__c/fields/SortOrder__c.field-meta.xml
<CustomField><fullName>SortOrder__c</fullName><defaultValue>0</defaultValue><label>Ordre</label><precision>6</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>