force-app/main/default/objects/InvoiceLine__c/fields/UnitPrice__c.field-meta.xml
<CustomField><fullName>UnitPrice__c</fullName><defaultValue>0</defaultValue><label>Prix unitaire HT</label><precision>18</precision><required>true</required><scale>2</scale><type>Currency</type></CustomField>